--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="app">React not rendered</div>
+    <div id="app"></div>
     <script src="bundle.js"></script>
 </body>
