--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <title>carousel component</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="Clone of airbnb image carousels">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
+    <link rel="preconnect" href="https://fec-carousel-pics.s3-us-west-2.amazonaws.com" as="image">
 </head>
 <body>
     <div id="app"></div>
     <script src="bundle.js"></script>
 </body>
+</html>
